added endpoint for retrieving specifications
