# app/internal/controller/controller.go
@@ -1,16 +1,38 @@
 package controller
 
 import (
+	"backend/app/internal/elastic"
+	"backend/app/internal/models"
+	"backend/app/internal/mongodb"
+
 	"github.com/gin-gonic/gin"
 	swaggerFiles "github.com/swaggo/files"
 	ginSwagger "github.com/swaggo/gin-swagger"
 )
 
-func SetupRoutes(router *gin.Engine) {
+func SetupRoutes(router *gin.Engine, config *models.Config) {
+	mongoClient := mongodb.Connect(config.Mongo)
+	elasticClient := elastic.Connect(config.Elastic)
+
+	// Create routes
 	v1 := router.Group("/api/v1")
 	{
 		v1.POST("/search", Search)
+		spec := v1.Group("/specification")
+		{
+			spec.GET("/:id", GetSpecificationHandler(mongoClient))
+			spec.POST("/insert", PostSpecificationHandler(mongoClient, elasticClient))
+		}
 	}
 
 	router.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
+}
+
+func NewHTTPError(ctx *gin.Context, status int, message string) {
+	body := models.HTTPError{
+		Code:    status,
+		Message: message,
+	}
+
+	ctx.JSON(status, body)
 }
