# app/internal/models/error.go
@@ -1,0 +1,6 @@
+package models
+
+type HTTPError struct {
+	Code    int    `json:"code" example:"400"`
+	Message string `json:"message" example:"Bad Request"`
+}
